# nozyio

./: .env.example  .gitignore  MANIFEST.in  README.md  build.sh  config.json  pyproject.toml  requirements.txt  setup_WIP.py  test.py
imagegen/: image_process.py  requirements.txt  text2image.py
math11/: calc.py
nozy/workflows/: add frame to img.json  add-frame-resize.json  gen image remove bg.json  image gen.json  remove bg-astro.json  resize-frame.json  save image.json  video to gif.json
nozyio/: ast_execution.py  code_to_graph.py  community_packages.json  config_utils.py  device_management.py  file_picker.py  job_queue_manager.py  node_package.py  scan_modules.py  scan_modules_ast.py  search_codebase.py  server.py  utils.py  websocket_manager.py
nozyio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nozyio/nodes/: utils.py
nozyio/web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
nozyio/web/src/: App.tsx
nozyio/web/src/canvas/: CustomEdge.tsx  FlowCanvas.tsx  (+1 more)
testin/: copyy.py
testin/hello/: hello.py
testin/hello/user/: say_my_name.py
testin/mathy/: adder.py
web/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
web/src/: App.tsx  index.css
web/src/canvas/: DnDContext.tsx  FlowCanvas.tsx
web/src/components/: FPSCounter.tsx
web/src/menu/: FunctionFilesList.tsx  TopMenu.tsx  TopMenuCodePreviewButton.tsx  TopMenuNodes.tsx
web/src/type/: types.ts
web/src/utils/: astUtils.ts  canvasUtils.ts
(+40 files in other folders)
