    [build-system]
    requires = ["setuptools", "wheel"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "nozyio"
    version = "0.1.9"
    description = "Node based workflow orchestration UI for python ML/AI computing"
    readme = "README.md"
    authors = [
        { name = "oozzy", email = "nozyio.hello@gmail.com" }
    ]
    dependencies = [
        "aiohttp",
        "astpretty",
        "requests",
        "pillow",
    ]
    requires-python = ">=3.9"

    [tool.setuptools]
    packages = ["nozyio"]
    include-package-data = true  # Ensure this is included

    [project.scripts]
    nozyio = "nozyio.server:start_server"

    [tool.setuptools.package-data]
    "nozyio" = ["web/dist/*", 'bin/linux/rg', 'bin/mac/rg', 'bin/windows/rg.exe']